--- a/src/UIComponents/Modal/Modal.css
+++ b/src/UIComponents/Modal/Modal.css
@@ -6,7 +6,7 @@
   height: 100%;
   background: var(--medium);
   opacity: 0.96;
-  z-index: 10;
+  z-index: 9;
 }
 
 .modal-main {
