--- a/src/components/CreateForm/CreateForm.css
+++ b/src/components/CreateForm/CreateForm.css
@@ -32,7 +32,7 @@
   position: absolute;
   top: 5px;
   right: 5px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .create-art-form {
@@ -96,36 +96,36 @@
 
 @media (min-width: 640px) {
   .form-images-container {
-    width: 95%;
+    width: 90%;
   }
-  .form-image-wrapper {
+  /* .form-image-wrapper {
     height: 35vh;
-  }
+  } */
 }
 
 @media (min-width: 768px) {
   .form-images-container {
-    width: 90%;
+    width: 80%;
   }
-  .form-image-wrapper {
+  /* .form-image-wrapper {
     height: 40vh;
-  }
+  } */
 }
 
 @media (min-width: 880px) {
   .form-images-container {
-    width: 85%;
+    width: 70%;
   }
 }
 
 @media (min-width: 1024px) {
   .form-images-container {
-    width: 80%;
+    width: 60%;
   }
 }
 
 @media (min-width: 1280px) {
   .form-images-container {
-    width: 75%;
+    width: 50%;
   }
 }
